<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/colorstrip"/>

    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <View style="@style/TitleBarSpring" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onRefreshClick" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onSearchClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_schedule"
                style="@style/HomeButton"
                android:onClick="onScheduleClick"
                android:text="@string/btn_schedule"
                android:drawableTop="@drawable/home_btn_schedule"/>
            <Button android:id="@+id/home_btn_map"
                style="@style/HomeButton"
                android:onClick="onMapClick"
                android:text="@string/btn_map"
                android:drawableTop="@drawable/home_btn_map"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_sessions"
                style="@style/HomeButton"
                android:onClick="onSessionsClick"
                android:text="@string/btn_sessions"
                android:drawableTop="@drawable/home_btn_sessions"/>
            <Button android:id="@+id/home_btn_starred"
                style="@style/HomeButton"
                android:onClick="onStarredClick"
                android:text="@string/btn_starred"
                android:drawableTop="@drawable/home_btn_starred"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_vendors"
                style="@style/HomeButton"
                android:onClick="onVendorsClick"
                android:text="@string/btn_vendors"
                android:drawableTop="@drawable/home_btn_sandbox"/>
                <!-- TODO: refactor home_btn_sandbox drawable name -->
            <Button android:id="@+id/home_btn_notes"
                style="@style/HomeButton"
                android:onClick="onNotesClick"
                android:text="@string/btn_notes"
                android:drawableTop="@drawable/home_btn_office_hours"/>
                <!-- TODO: refactor home_btn_office_hours drawable name -->
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/now_playing_loading"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/now_playing_height"
        android:orientation="horizontal"
        android:background="#eee"
        android:gravity="center">
        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dip"
            android:indeterminate="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/now_playing_loading"/>
    </LinearLayout>
</LinearLayout>
